# markrs

./: Cargo.toml  README.md  check_markast  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
bench/pulldown-cmark-runner/: Cargo.toml
bench/pulldown-cmark-runner/src/: main.rs
bench/results/: latest.json  markast-bench-input.json  markrs-bench-input.json
docs/: README.md  architecture.md  p0-parser-design.md  p0-parser-plan.md  performance.md  rename-to-markast.md  requirements.md  testing-and-compat.md
examples/: sample.md
npm/markast-darwin-arm64/: README.md  package.json
npm/markast-darwin-x64/: README.md  package.json
npm/markast-linux-arm64-gnu/: README.md  package.json
npm/markast-linux-x64-gnu/: README.md  package.json
npm/markast-win32-x64-msvc/: README.md  package.json
scripts/: bench-history.mjs  benchmark.mjs  check-marked-runtime-drift.mjs  check-strict.mjs  compat-report.mjs  render-marked-runtime.mjs  stage-npm-binary.mjs  update-compat-xfail.sh
src/: lib.rs  main.rs
src/markdown/: block.rs  inline.rs  mod.rs  parser.rs  render.rs  render_html.rs
tests/: compat_runtime.rs  compat_snapshot.rs  own_rendering.rs  parser_blocks.rs  parser_inlines.rs  parser_regressions.rs
tests/compat/: runtime_xfail.yaml  xfail.yaml
tests/compat_support/: mod.rs
