[package]
name = "markast"
version = "0.1.0"
edition = "2024"
description = "Rust-powered markdown to HTML renderer with customizable styles"
license = "MIT"
repository = "https://github.com/ericyangpan/markast"
readme = "README.md"
keywords = ["markdown", "cli", "terminal", "color"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
linkify = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
globset = "0.4"
regex = "1.12"
serde_yaml = "0.9"
walkdir = "2.5"

[profile.release]
lto = "thin"
codegen-units = 1
